# bunbox

./: .gitignore  IDEAS-v1.0.md  IDEAS-v1.1.md  README.md  TECNICAL.md  bunbox.code-workspace  package.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  bug_report.yml  feature_request.yml  support.yaml
.github/workflows/: build-bgfx-shaderc.yml  build-bgfx.yml  build-diligent-2.yml  build-diligent.yml  build-freetype.yml  build-glfw-bgfx-freetype.yml  build-glfw.yml  build-llgl.yml  build-shaderc.yml  build-wgpu.yml  glfw-bgfx.yml  sdl3-macos.yml
libs/core/: .npmignore  package.json
libs/core/vulfram-core/: Cargo.toml
libs/core/vulfram-core/src/: lib.rs  main.rs
libs/core/vulfram-core/src/core/: enums.rs  mod.rs  pointers.rs  state.rs  units.rs
libs/core/vulfram-core/src/core/cmd/: args.rs  mod.rs
libs/engine/: .prettierrc  eslint.config.js  package.json  tsconfig.json
libs/glfw/: .npmignore  package.json  tsconfig.json
libs/naga/: .dockerignore  .gitignore  .npmignore  .prettierrc  Dockerfile  README.md  build.sh  package.json  tsconfig.json
libs/naga/rust/: Cargo.toml
libs/naga/rust/src/: lib.rs
libs/sdl3/: .npmignore  .prettierignore  .prettierrc  README.md  STRUCTS_TODO.MD  package.json  tsconfig.json
libs/src/: EngineCmd.ts  EngineEvent.ts  EngineWindowState.ts
libs/struct/: .npmignore  README.md  package.json  tsconfig.json
libs/tree/: .npmignore  README.md  package.json  tsconfig.json
libs/utils/: .npmignore  .prettierrc  package.json
libs/vk/: README.md  eslint.config.js  package.json
(+847 files in other folders)
