[package]
name = "vulfram-core"
version = "0.0.1"
edition = "2024"

[dependencies]
glfw = "0.60.0"
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.11.2"
wgpu = "27.0.1"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "vulfram-core"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
