[package]
name = "naga-wasm"
version = "0.2.1"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]   # necessário p/ wasm

[dependencies]
wasm-bindgen = "0.2"

# Escolha uma versão estável do Naga.
# A 0.20.* é exemplo; se quiser a mais recente, troque a versão mantendo os features.
naga = { version = "^26.0.0", default-features = false, features = [
  "wgsl-in",   # read WGSL
  "wgsl-out",  # write WGSL (for debug output)
  "spv-in",    # read SPIR-V
  "spv-out",   # write SPIR-V
  "msl-out"    # write MSL
] }

# Qualidade de vida (opcional) para mensagens de panic no console JS
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s" # binário menor
